tests/NormalTests/paczka1/fuzzy1/40569715.err
Error in line 3: mpEJTZAIe8I S231 272,5
Error in line 14: SOhFKp A471 72,1
Error in line 26: zfrL8wb S939 37,0
Error in line 33: A979 A979 84,0
Error in line 38: A979 A979 25,5
Error in line 40: SOhFKp S231 -1,0
